<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2008 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
    <string name="about_menu">About</string>
    <string name="about_message">A utility written by the ZXing Team to help with the development of Barcode Scanner.
        http://code.google.com/p/zxing
    </string>
    <string name="app_name">BichosQR Test</string>
    <string name="benchmark_name">ZXing Benchmark</string>
    <string name="benchmark_help">Place images in /sdcard/zxingbenchmark, then check \"adb logcat\" for results. Turn on
        Airplane Mode first for more reliable results.
    </string>
    <string name="benchmark_run">Run benchmark</string>
    <string name="benchmark_running">Benchmark running\u2026</string>
    <string name="encode_bad_data">Encode bad data</string>
    <string name="encode_contact">Encode contact</string>
    <string name="encode_email">Encode email</string>
    <string name="encode_hidden_data">Encode hidden data</string>
    <string name="encode_location">Encode location</string>
    <string name="encode_phone">Encode phone</string>
    <string name="encode_sms">Encode SMS</string>
    <string name="encode_url">Encode URL</string>
    <string name="get_camera_parameters">Get camera parameters</string>
    <string name="ok_button">OK</string>
    <string name="result_failed">No barcode found</string>
    <string name="result_failed_why">"The user gave up and pressed Back"</string>
    <string name="result_succeeded">Found barcode</string>
    <string name="scan_anything">Scan anything</string>
    <string name="scan_product">Scan product</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="search_book_contents">Search Book Contents</string>
    <string name="share_via_barcode">Share via barcode</string>
    <string name="hello">hello</string>
    <string name="bajoControl">Bajo Control</string>
    <string name="sobrepasado">Sobrepasado</string>
    <string name="aplicacion_biocida">Aplicación de biocida realizada</string>
    <string name="actualizar_sistema_control">Actualizar Sistema de Control</string>
    <string name="actividad_visita">Actividad del sistema</string>
    <string name="estado_sanitario">Estado Sanitario</string>
    <string name="estado_estructural">Estado Estructural</string>
    <string name="medidas_correctoras">Medidas Correctora</string>
    <string name="correcciones_sanitarias">Corecciones sanitarias</string>
    <string name="correcciones_estructurales">Correcciones estructurales</string>
    <string name="otros">Otros</string>
    <string name="actividad_plagas">Actividad de Plagas</string>
    <string name="observaciones">Observaciones</string>
    <string name=""></string>
    <string-array name="spinnerActividadSistema">
        <item>Aplicación de biocida realizada</item>
        <item>Correcciones sanitarias</item>
        <item>Correcciones estructurales</item>
        <item>Otros</item>
    </string-array>
</resources>
