<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@android:color/white">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizar_sistema_control"
            android:id="@+id/textView" android:layout_gravity="center" android:textColor="@android:color/black"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actividad_visita"
            android:id="@+id/textView1" android:layout_gravity="center" android:textColor="@android:color/black"/>
    <Spinner
        android:id="@+id/spinnerActividadSistema"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:entries="@array/spinnerActividadSistema" android:spinnerMode="dropdown"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_sanitario"
            android:id="@+id/textView2" android:layout_gravity="center" android:textColor="@android:color/black"/>

    <RadioGroup
            android:id="@+id/radioEstadoSanitario"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_gravity="center">
        <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/bajoControl"
                    android:id="@+id/estadoSanitarioBajoControl" android:layout_gravity="left|center_vertical" android:checked="false"
                    android:textColor="@android:color/darker_gray"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/sobrepasado"
                    android:id="@+id/estadoSanitarioSobrepasado" android:layout_gravity="right|center_vertical" android:checked="false"
                    android:layout_weight="0.25" android:textColor="@android:color/darker_gray"/>
    </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_estructural"
            android:id="@+id/textView3" android:layout_gravity="center" android:textColor="@android:color/black"/>
    <RadioGroup
                android:id="@+id/radioEstadoEstructural"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_gravity="center">
            <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        android:text="@string/bajoControl"
                        android:id="@+id/estadoEstructuralBajocontrol" android:layout_gravity="left|center_vertical" android:checked="false"
                        android:textColor="@android:color/darker_gray"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        android:text="@string/sobrepasado"
                        android:id="@+id/estadoEstructuralSobrepasado" android:layout_gravity="right|center_vertical" android:checked="false"
                        android:textColor="@android:color/darker_gray"/>
        </RadioGroup>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medidas_correctoras"
            android:id="@+id/textView4" android:layout_gravity="center" android:textColor="@android:color/black"/>

            <CheckBox
                        android:layout_width="fill_parent"
                        android:layout_height="23dp"
                        android:text="@string/aplicacion_biocida"
                        android:id="@+id/checkBoxAplicacionBiocida" android:checked="false"
                        android:textColor="@android:color/darker_gray"/>
            <CheckBox
                        android:layout_width="fill_parent"
                        android:layout_height="23dp"
                        android:text="@string/correcciones_sanitarias"
                        android:id="@+id/checkBoxCorreccionesSanitarias" android:checked="false"
                        android:textColor="@android:color/darker_gray"/>

            <CheckBox
                        android:layout_width="fill_parent"
                        android:layout_height="23dp"
                        android:text="@string/correcciones_estructurales"
                        android:id="@+id/checkBoxCorreccionesEstructurales" android:checked="false"
                        android:textColor="@android:color/darker_gray"/>
            <CheckBox
                        android:layout_width="fill_parent"
                        android:layout_height="23dp"
                        android:text="@string/otros"
                        android:id="@+id/checkBoxOtros" android:checked="false"
                        android:textColor="@android:color/darker_gray"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actividad_plagas"
            android:id="@+id/actividadPlagas" android:layout_gravity="center" android:textColor="@android:color/black"/>
    <RadioGroup
                android:id="@+id/radioActividadPlagas"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_gravity="center">
            <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        android:text="@string/bajoControl"
                        android:id="@+id/actividadPlagasBajocontrol" android:layout_gravity="left|center_vertical" android:checked="false"
                        android:textColor="@android:color/darker_gray"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        android:text="@string/sobrepasado"
                        android:id="@+id/actividadPlagasSobrepasado" android:layout_gravity="right|center_vertical" android:checked="false"
                        android:textColor="@android:color/darker_gray"/>
        </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observaciones"
            android:id="@+id/textView6" android:layout_gravity="center" android:textColor="@android:color/black"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:text="New EditText"
            android:id="@+id/editText" android:layout_gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/empresa" android:layout_gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cliente" android:layout_gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ptoControl" android:layout_gravity="center"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    </Button>

</LinearLayout>